--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    //FirebaseAuth
+    implementation 'com.google.firebase:firebase-auth-ktx:21.0.8'
+
+    // FirebaseUI
+    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
 
     // Import the Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:30.3.2')
