--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-database'
 
+    //CloudFirestore
+    implementation 'com.google.firebase:firebase-firestore:24.3.0'
+
     // Add the dependencies for any other desired Firebase products
     // https://firebase.google.com/docs/android/setup#available-libraries
 
