--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,9 @@ dependencies {
     //CloudFirestore
     implementation 'com.google.firebase:firebase-firestore:24.3.0'
 
+    // admob
+    implementation 'com.google.android.gms:play-services-ads:19.7.0'
+
     // Add the dependencies for any other desired Firebase products
     // https://firebase.google.com/docs/android/setup#available-libraries
 
